Fixing spacing issues

--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  /* justify-content: space-around; */
 }
 
 h2 {
